dashboard/app/assets/stylesheets/application.scss
/* ... */
.flex-container {
  display: flex;
  justify-content: space-between;
}

#change-password {
  max-width: 600px;
}

#signin,
#change-password {
  $field-width: 310px;
  $button-width: 324px;

  min-width: 450px;
  display: flex;
  flex-direction: column;
  flex-grow: 2;

  form {
    display: flex;
    flex-direction: column;
  }

  .field {
    display: flex;
    align-items: center;
    justify-content: space-between;

    input[type=text], input[type=password] {
      width: $field-width;
      height: 40px;
      padding: 0 6px;
    }
  }

  .field-aligned {
    width: $button-width;
    align-self: flex-end;
  }

  #forgot-password {
    font-family: $gotham-extra-bold-italics;
  }

  button {
    align-self: flex-end;
    background-color: $orange;
    border: 1px solid $orange;
    color: $white;
    font-family: $gotham-extra-bold;
    margin: 5px 0;
    width: $button-width;
  }

  .blue-button {
    background-color: $blue;
    border: 1px solid $blue;
  }
}

#signup, #school-info-modal {
  display: flex;
  flex-wrap: wrap;

  .header {
    display: flex;
    flex-wrap: wrap;
  }

  .oauth-links {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 10px;
  }

  .more-details {
    display: flex;
    .more-details-text {
      margin: 0 10px;
    }
  }

  .signup {
    margin: 20px 0;
  }

  .finish-signup {
    width: 800px;
  }

  .signup, .finish-signup {
    $school-info-background: #f7f7f7;
    $school-info-border-color: #e5e5e5;

    .section-container {
      padding: 10px;
      flex-grow: 1;
      background-color: $school-info-background;
      border: 1px solid $school-info-border-color;

      h5 {
        font-weight: bold;
      }

      hr {
        border: 1px solid $school-info-border-color;
      }
    }

    #school-info-inputs {
      padding: 0;
    }

    .field-row {
      display: flex;
      align-items: center;
    }

    .field {
      width: 600px;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    .field-sm {
      width: 400px;
    }

    .field_with_errors {
      display: flex;
      flex-grow: 1;
    }

    .field_with_errors label {
      color: $black;
    }

    .field_with_errors > input,
    .field_with_errors > select {
      background-color: $white;
    }

    .error {
      color: $red;
      font-style: italic;
      margin: 0;
    }

    .padded {
      padding-left: 10px;
      max-width: 150px;
    }

    select {
      height: 46px;
      margin: 0;
    }

    #school-type {
      height: 36px;
    }

    input[type=text], input[type=password], input[type=email] {
      height: 36px;
    }

    input {
      margin: 0;
    }

    input, select {
      flex-grow: 1;
    }

    .row {
      display: flex;
      margin-bottom: 10px;

      [class*=span] {
        align-self: center;
        display: flex;
        .div {
          align-self: center;
          display: flex;
        }
      }

      label {
        margin: 0;
      }

      input[type=checkbox] {
        flex-grow: 0;
        align-self: center;
        .field_with_errors {
          flex-grow: 0;
        }
      }
    }
    #parent-email-section {
      background-color: $school-info-background;
      border: 1px solid $school-info-border-color;
      flex-wrap: wrap;
    }
    .padded-container {
      padding: 10px;
      display: flex;
      flex-wrap: wrap;
      .row {
        flex-grow: 1;
      }
      .parent-email-field-label {
        flex-wrap: wrap;
        p {
          margin: 0;
        }
      }
      .parent-email-field-input {
        flex-grow: 1;
      }
    }

    .parent-email-section-header {
      margin-bottom: 0;
      flex-grow: 1;
    }
    .parent-email-field {
      margin-top: 10px;
      margin-bottom: 0;
      flex-grow: 1;
    }

    .checkbox {
      display: flex;
      padding: 0;

      label {
        display: flex;
      }

      p, span {
        margin: 0;
        padding: 0 10px;
        font-size: 14px;
      }
    }

    #email-preference-radio {
      p {
        margin: 0;
      }
    }

    .radio {
      padding: 0;
      display: flex;
      input[type=radio] {
        margin-left: 0;
        align-self: center;
      }
      input[type=radio], label {
        flex-grow: 0;
        margin-right: 5px;
      }
      .field_with_errors {
        flex-grow: 0;
      }
    }

    #school-type {
      width: 370px !important;
    }

    .submit-section {
      display: flex;
      flex-direction: column;
      align-items: flex-end;
    }

    .submit {
      background-color: $orange;
      border: 1px solid $orange;
      color: $white;
      padding: 0 20px;
      margin: 5px 0;
      font-size: 18px;
      height: 40px;
      font-family: $gotham-extra-bold;
    }

    #forgot-password {
      align-self: center;
      font-style: italic;
    }

    .tos {
      p {
        font-size: 14px;
      }
    }
  }
}

.vertical-or {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 20px;
  font-size: 16px;
  font-weight: bolder;
  color: $charcoal;

  hr {
    width: 1px;
    height: 100%;
    background-color: $light_gray;
  }
}

.horizontal-or {
  display: flex;
  flex-grow: 1;
  align-items: center;
  justify-content: space-between;
  font-size: 16px;
  font-weight: bolder;
  color: $charcoal;

  hr {
    width: 40%;
    border-color: $light_gray;
  }
}

.signup-header {
  flex-grow: 1;
  text-align: center;
}
/* ... */

